--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 yiri-onebot
-APScheduler==3.10.1
-asyncio==3.4.3
+APScheduler
 beautifulsoup4
-colorlog==6.7.0
+colorlog
 psutil
-fuzzywuzzy==0.18.0
+fuzzywuzzy
 httpx
 picimagesearch
 regex
-requests==2.28.2
-soundfile==0.12.1
+soundfile
 zhipuai==1.0.7
 google-generativeai
 openai
