--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -24,7 +24,7 @@
 moderate:
   selfsensor: false  #开启自我审核
   selfthreshold: 50  #自我审核阈值
-chatGLM:                   #对话模型通用设置
+对话模型设置:                   #对话模型通用设置
   aiReplyCore: False  #ai回复核心，为大部分功能启用ai回复，可优化回复表现，目前为测试功能
   model: random  #ai模型，random(自动选取免费可用模型) |binggpt4(免费无需配置，速度较慢)| 后面几个需要配置api.yaml对应变量(括号内为api.yaml对应配置项，括号前为这里填写的模型名): 讯飞星火(api.yaml的sparkAI),文心一言(api.yaml的wenxinAI),Gemini(api.yaml的gemini),腾讯元器(api.yaml的腾讯元器),gpt3.5(api.yaml的openai-keys),characterglm(chatGLM)
   randomModel&&&Priority:   #random模式下，模型优先使用顺序，确保稳定性,直接进文件里改。
