--- a/config.yaml
+++ b/config.yaml
@@ -4,3 +4,4 @@ access_token: "sff"                #access_token，如果你onebot实现的acces
 机器人QQ: 919467430
 机器人名字: eridantus
 master: 1840094972              #bot管理员，仅可填写1人
+mainGroup: 628763673            #主群，暂时没什么用
