🚀增加语音功能，暂不支持本地文件发送。example.py测试用例和readME更新

--- a/config/api.yaml
+++ b/config/api.yaml
@@ -8,8 +8,9 @@ nasa_api: HSxxxxxxx              #nasa相关天文api 从https://api.nasa.gov/in
 chatGLM: 69xxxxxxx               #chatGLM的apiKey，从https://open.bigmodel.cn/获取
 gemini:                          #谷歌的gemini api，支持多key，，需要配置proxy或GeminiRevProxy，否则无法使用
   gemini-keys:                   #在https://ai.google.dev/tutorials/setup?hl=zh-cn获取
-    - xxxx
+    - xxxxx
   gemini-model: "gemini-1.5-flash"
+  GeminiRevProxy: ""               #使用Gemini，要么配置proxy，要么配置这个。基于netlify反向代理，搭建后本地环境无需开启代理即可访问Gemini，参考https://github.com/avilliai/Manyana/issues/17
 openai:                          #openai官方的apikey
   openai-keys:
     - sk-Mxxxxxxxxxxx
@@ -26,13 +27,13 @@ openai:                          #openai官方的apikey
 腾讯元器: #接入QQ智能体
   智能体ID: ""
   token: ""
-bing-image-creator:              #bing的ai绘画，参考https://github.com/avilliai/Manyana/issues/8
-  _U: ""
+
+bing-image-creator:              #bing的ai绘画，
+  _U: ""                         #参考https://github.com/avilliai/Manyana/issues/8
   KievRPSSecAuth: ""
 
 proxy: ''                        #代理 http://127.0.0.1:端口 如http://127.0.0.1:10809 自己设置对应的端口，没有就不填，v2ray一般是10809，clash一般7890，ssr一般1080
 sock5-proxy: ""                  #sock5代理，如使用bing-imagecreator必须配置，取决于你自己代理的端口。
-GeminiRevProxy: ""               #基于netlify反向代理，搭建后本地环境无需开启代理即可访问Gemini，参考https://github.com/avilliai/Manyana/issues/17
 
 FishTTSAuthorization: ""         #FishTTS语音合成必要参数，看https://github.com/avilliai/Manyana/issues/19
 sdUrl: ""                        #你自己搭建的sd，地址，示例http://127.0.0.1:17858（示例≠你能直接填示例用），部署https://www.bilibili.com/video/BV1iM4y1y7oA/
