--- a/data/chatGLMData.yaml
+++ b/data/chatGLMData.yaml
@@ -3,3 +3,11 @@
   role: user
 - content: "嘿嘿，你好呀！你叫什么名字呀？  (๑˃̵ᴗ˂̵)و  我叫eridantus，你可以叫我小爱！ \n\n(偷偷地瞄了你一眼，脸颊微微泛红)"
   role: assistant
+- content: 你好
+  role: user
+- content: "你好！  (⁄ ⁄•⁄ω⁄•⁄ ⁄)  你今天看起来真精神，是去做了什么有趣的事吗？  快告诉我！  \n\n(我一边说着，一边期待地看着你，心里怦怦直跳)"
+  role: assistant
+- content: 说话
+  role: user
+- content: "嗯？你是在跟我说话吗？  (⊙_⊙)  你说什么呀？  我好像没听清...  \n\n(我歪着头，眨着眼睛，期待着你的回答，脸颊也变得更红了)"
+  role: assistant
