--- a/更新日志.yaml
+++ b/更新日志.yaml
@@ -1,5 +1,6 @@
 2024/8/4:
   - 立项，初始提交
-  - 当前ai回复功能可用，但语音和图片发送暂时还没弄明白
+  - 当前ai回复功能可用
   - 常用的工具函数放在了plugins/toolkits.py，便于开发使用
   - 由于配置项变动，Manyana和Eridanus的配置文件并不完全兼容，请手动填写。
+  - 语音、文本、图片相关发送用例放在了run/example.py
