--- a/data/text/jokes.yaml
+++ b/data/text/jokes.yaml
@@ -1,10 +1,4 @@
-# -*- coding: utf-8 -*-
-"""
-@author: zyckk4  https://github.com/zyckk4
-"""
-import random
-
-jokes = [
+jokes: [
     'Erdos相信上帝有一本记录所有数学中绝妙证明的书，上帝相信这本书在%name%手里',
     '有一次费马惹怒了%name%，于是就有了费马最后定理',
     '%name%从不会用光页边的空白',
@@ -139,7 +133,7 @@ jokes = [
     '%name%就是图灵测试的解答。'
 ]
 
-america_jokes = [
+america_jokes: [
     '美国人抓了一个苏联飞行员。\n“告诉我米格50的计划！”\n“我不知道”。苏联人被打了一顿\n“告诉我米格50的计划！”\n“我一点都不知道！”。于是苏联人又被打了一顿。\n后来美国人也烦了，就把苏联人放回去了，回去的路上，苏联飞行员对他的同伴说：“我一定要好好学学米格50的计划，就因为我啥都不知道，美国人都快把我打死了。”',
     '海湾战争之后，有个社会学者再次来到了科威特。他感叹道科威特的巨大的社会变化：\n“战争前，女人们走在男人后面5步的距离；战争后，男人们走在女人后面20步的距离！”这位社会学家说：“到底是什么改变了这个现状？”\n“是地雷。”一个美军说道。',
     '有一天，乔治布什收到紧急警报，“苏联人登月了！并且开始给月球涂上了红色！”\n乔治布什无动于衷。\n第二天，他又收到警报：“半个月亮已经被苏联人涂成红色了！”\n乔治布什依旧无动于衷。\n第三天，又收到警报：“整个月球都被涂成红色的了！苏联国旗的红色！”\n“好，”布什说，“那我们现在可以派人上去涂上Coca cola了！”',
@@ -170,7 +164,7 @@ america_jokes = [
     '军事学院在进行军史考试。主考官问一名学员:“请说出历史上任何年度美国空军的兵员数。”\n学员迅速回答“1842年一零。 ”'
 ]
 
-soviet_jokes = [
+soviet_jokes: [
     '集体农庄庄员伊万在河里捉到一条大鱼，高兴的回到家里和老婆说：“看，我们有炸鱼吃了！”\n“没有油啊。”\n“那就煮！”\n“没锅。”\n“烤鱼！”\n“没柴。”\n伊万气死了，走到河边把鱼扔了回去。那鱼在水里划了一个半圆，上身出水，举起右鳍激动地高呼：“斯大林万岁！”',
     '列宁快去世了，叫赶快把继承人斯大林召进克里姆林宫来，临终有几句话要嘱托：“不瞒你说，我还有一个隐忧啊，斯大林。”\n“说吧，亲爱的伊里奇。”斯大林专心地听着。\n“ 那就是，人们会跟你走吗？不知你想过了没有？”\n“他们一定会跟我走的。”斯大林强调说，“一定会！”\n“但愿如此。”列宁说，“我只是担心，万一他们不跟你走，你怎么办？”\n“那只好让他们跟你走！”',
     '有个人向赫鲁晓夫汇报说：“现在大剧院正上演一个剧，里面有您出现，每当您一出场，下面就热烈鼓掌。”赫鲁晓夫听了以后非常得意。\n有一天他买了一张普通票，去看这个剧，他陷入了沉思，忘记了鼓掌，这时旁边有人推了他一把，紧张地说：\n“哎！你为什么不鼓掌？不要命啦？！”',
@@ -410,7 +404,7 @@ soviet_jokes = [
     '一次高规格的苏联代表团正在返回途中，突然飞机的尾部脱落了。\n官员们命悬一线，死死抓住能抓着的东西，由于乘客量太大，飞机正在快速下落。\n赫鲁晓夫急中生智，大喊道，“苏联永垂不朽！”\n急促但暴风雨般的掌声之后，飞机开始运行正常，最终安全抵达莫斯科。'
 ]
 
-french_jokes = [
+french_jokes: [
     '法国国旗的本体是白旗。',
     '现在售卖二战时，法军所用步枪——跟新的一般！因为从未被用过，只被扔在地上过一次。',
     '没有人能在法国投降前占领巴黎。\n（二战时德军动作极其迅速，结果刚打到巴黎城郊，法国就投降了）',
@@ -426,16 +420,3 @@ french_jokes = [
     '《法军二战简史》\n法兰西：我马奇诺天下无敌\n德国：被我绕过去了\n法兰西：我陆军百万\n德国：出售二手法制军械\n法兰西：我有强大舰队\n英国：不是我要A队友，我是真怕你投降资敌\n法兰西：半个非洲都是我的\n隆美尔：excuse me？\n法兰西：我也算日不落帝国\n日本：越南人民站起来了！柬埔寨人民站起来了！\n法兰西：自由法国游击到45年，打了整整五年游击战\nTG:呵呵\n法兰西：都怪闪电战太厉害，我都来不及反应，战略落后的锅。\n斯大林：图哈切夫斯基的战略思想先进不先进？37年我就把他做了，45年照样柏林插红旗\n法兰西：敦刻尔克奇迹\n戈林：我的锅',
     '《法军战争简史》\n高卢战争（BC58-BC52） - 败北，高卢成为罗马行省\n第一次百年战争（1337-1453） - 胜利，英国丢掉在欧陆的领土\n意大利战争（1494-1559） -失败 法国停止在意大利扩张，西班牙继续统治，意大利继续分裂\n法国宗教战争（1568-1598） - 败北[注:此为法国内战]\n三十年战争（1618-1648） - 同盟胜利，敌方联盟大败\n遗产战争（1667-1668） - 扯平\n法荷战争（1672-1678）- 胜利，极大削弱了荷兰\n大同盟战争（1688-1697） - 法军战术胜利 结局扯平\n西班牙王位继承战争（1701-1714） - 法军战术胜利 结局扯平\n美国独立战争（1775-1783） - 介入胜利，但是把国库打空了\n法国大革命（1789-1799-1830） - 唯一的单独胜利（但对手也是法国人）\n拿破仑战争（1799-1815） - 七战五胜 沉重打击了欧洲封建势力 但结局战败\n普法战争（1870-1871） - 败北，割让土地\n清法战争（1883-1885） - 因大清内外交困而获得战略胜利，但战术上惨败 不胜而胜的开端\n第一次世界大战（1914-1918） - 同盟胜利，惨胜\n第二次世界大战（1939-1945） - 投降→同盟胜利\n第一次印支战争（1945-1954） - 败北\n反恐战争（2001-） - 火线跑路'
 ]
-
-
-def get_joke(joke_tp):
-    if joke_tp == '法国':
-        return random.choice(french_jokes)
-    elif joke_tp == '美国':
-        return random.choice(america_jokes)
-    elif joke_tp == '苏联':
-        return random.choice(soviet_jokes)
-    else:
-        if joke_tp == '':
-            joke_tp = 'yiris'
-        return random.choice(jokes).replace('%name%', joke_tp)
