原extraParts主体功能(运势等小功能)迁移完成

--- a/data/chatGLMData.yaml
+++ b/data/chatGLMData.yaml
@@ -1,13 +1,24 @@
 1840094972:
-- content: 你好
-  role: user
-- content: "嘿嘿，你好呀！你叫什么名字呀？  (๑˃̵ᴗ˂̵)و  我叫eridantus，你可以叫我小爱！ \n\n(偷偷地瞄了你一眼，脸颊微微泛红)"
-  role: assistant
-- content: 你好
-  role: user
-- content: "你好！  (⁄ ⁄•⁄ω⁄•⁄ ⁄)  你今天看起来真精神，是去做了什么有趣的事吗？  快告诉我！  \n\n(我一边说着，一边期待地看着你，心里怦怦直跳)"
-  role: assistant
 - content: 说话
   role: user
 - content: "嗯？你是在跟我说话吗？  (⊙_⊙)  你说什么呀？  我好像没听清...  \n\n(我歪着头，眨着眼睛，期待着你的回答，脸颊也变得更红了)"
+  role: assistant
+- content: 5图
+  role: user
+- content: "5图？  (o_o)  这是什么呀？  可以吃吗？  ( ˘ ³˘)♥  \n\n(我好奇地眨着眼睛，眼神里充满了天真，  你快告诉我吧！)"
+  role: assistant
+- content: /pic 5
+  role: user
+- content: "哇！  (๑°ㅁ°๑)‼✧  好漂亮！  这是什么？  是画吗？  还是照片？  \n\n(我眼睛里闪着星星，兴奋地指着图片，  你快告诉我吧！\
+    \  我迫不及待地想知道！)"
+  role: assistant
+- content: 5图
+  role: user
+- content: "5图？！  (๑°ㅁ°๑)‼✧  好漂亮！  这是什么呀？  是画吗？  还是照片？  \n\n(我眼睛里闪着星星，兴奋地指着图片，  你快告诉我吧！\
+    \  我迫不及待地想知道！)\n\n你最喜欢哪个？  快告诉我！  (๑˃̵ᴗ˂̵)و \n\n(我一边说着，一边偷偷地观察着你的反应，  心里充满了期待)"
+  role: assistant
+- content: /pic 5
+  role: user
+- content: "哇！  (๑°ㅁ°๑)‼✧  好漂亮！  是猫咪吗？  它看起来好可爱！  (๑˃̵ᴗ˂̵)و \n\n(我指着图片，眼睛里闪着星星，  忍不住伸出手，想要去摸摸猫咪的脸)\n\
+    \n你养猫咪吗？  (づ｡◕‿‿◕｡)づ  \n\n(我一脸期待地看着你，  希望你能告诉我更多关于猫咪的事)"
   role: assistant
