--- a/data/userData.yaml
+++ b/data/userData.yaml
@@ -1,40 +1,8 @@
-'1262147146':
+1840094972:
   city: 通辽
-  exp: '2'
-  id: miav-HsO331K
-  ok: '2024-07-29'
-  st: '2024-07-29 00:58:36'
-  sts: '2'
-  userName: FrostNova
-'1840094972':
-  city: 通辽
-  exp: '5'
+  exp: 5
   id: '3'
   ok: '2023-07-21'
   st: '2023-07-21 01:00:37'
-  sts: '2'
+  签到次数: 2
   userName: 开发者
-'2010369085':
-  city: 通辽
-  exp: '32'
-  id: miav-ehdQDJH
-  ok: '2024-07-30'
-  st: '2024-07-28 23:59:29'
-  sts: '4'
-  userName: 烟柳画桥
-'2312131943':
-  city: 通辽
-  exp: '18'
-  id: miav-CyYdA9i
-  ok: '2024-07-29'
-  st: '2024-07-29 00:13:42'
-  sts: '2'
-  userName: 時羽
-'3387658778':
-  city: 通辽
-  exp: '14'
-  id: miav-O960LAd
-  ok: '2024-07-29'
-  st: '2024-07-29 00:03:11'
-  sts: '2'
-  userName: 长风破浪
