原extraParts主体功能(运势等小功能)迁移完成

--- a/data/userData.yaml
+++ b/data/userData.yaml
@@ -2,7 +2,8 @@
   city: 通辽
   exp: 5
   id: '3'
-  ok: '2023-07-21'
-  st: '2023-07-21 01:00:37'
+  上次签到: '2023-07-21'
+  初次签到: '2023-07-21 01:00:37'
   签到次数: 2
+  连续签到: 0
   userName: 开发者
