--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -1,17 +1,22 @@
 #单独功能开关
+bot自身设置:
+  FordMesMenu: false #是否以聊天记录形式发送菜单
 ai绘画:
   接口1: false    #大概是跑路了
   接口2: false    #日常寄
   接口3: true     #差不多
   接口4: true
   接口5: true
-  接口6: true    #朦胧(还行，只支持英文prompt)
+  接口6: true    #(还行，只支持英文prompt)
   modelscopeSD: True  #modelscope逆向ai绘图，较为稳定
   sd接口: true   #anything v3
   ai重绘: false  #目前应该是不可用的
   ai重绘2: false #同上
   positive_prompt: "(((best quality))),(((ultra detailed))),(((masterpiece))),illustration,Extreme detail expression,Ultra High Definition,Maximum Detail Display,Hyperdetail,Clear details,Amazing quality,Super details,Unbelievable,HDR,16K,details,The most authentic,Glossy solid color"
   negative_prompt: "nsfw, paintings, sketches, worst quality, low quality, normal quality, lowres, watermark, monochrome, grayscale, ugly, blurry, Tan skin, dark skin, black skin, skin spots, skin blemishes, age spot, glans, disabled, distorted, bad anatomy, morbid, malformation, amputation, bad proportions, twins, missing body, fused body, extra head, poorly drawn face, bad eyes, deformed eye, unclear eyes, cross-eyed, long neck, malformed limbs, extra limbs, extra arms, missing arms, bad tongue, strange fingers, mutated hands, missing hands, poorly drawn hands, extra hands, fused hands, connected hand, bad hands, wrong fingers, missing fingers, extra fingers, 4 fingers, 3 fingers, deformed hands, extra legs, bad legs, many legs, more than two legs, bad feet, wrong feet, extra feets,"
+黑神话wiki:
+  技能招式: False
+  以聊天记录形式发送: True
 小功能:
   发病: true
 点歌:
@@ -24,6 +29,7 @@ ai绘画:
   grayPic: True             #图片转灰度图，降低被吞几率
   withPic: True            #是否展示图片预览，不建议开，容易被吞
   InternetMeme: False       #是否启用网络Meme（英文meme）
+  watchPrefix: "/"          #“看看”指令的前缀
 运势&塔罗:
   lockLuck: false           #是否锁定运势等功能的结果
 JMComic:            #禁漫相关功能设置
@@ -35,9 +41,13 @@ JMComic:            #禁漫相关功能设置
   订阅与推送: True   #为强迫症提供的开关，关闭后不会再检查碧蓝档案三服订阅更新
 b站相关功能:
   直播订阅: True    #同上，b站相关功能现在不多，以后加
+漂流瓶:
+  enable: True    #是否启用漂流瓶功能
+  pushcomments: True #用户的有评论时是否向用户推送通知
+  sensor: False   #是否启用审核功能(暂时不可用)
 scheduledTasks:    #其他定时任务模块的内容会陆续转到这里
   morning:         #晨间推送
-    enable: False  #向信任用户推送天气信息
+    enable: false  #向信任用户推送天气信息
     text: "早上好，这里是今天的天气"  #如启用aiReplyCore，此项将被ai替代
     time: 8/3      #推送时间
   bangumi:         #bangumi推送
@@ -65,8 +75,11 @@ scheduledTasks:    #其他定时任务模块的内容会陆续转到这里
     text: 早上好杂鱼❤，这里是今天的新闻
     time: 8/2
   steamadd1:       #免费游戏提示
+    enable: true
     text: 杂鱼❤来白嫖游戏了
     time: 12/2
-
-
+  nightASMR:
+    enable: true
+    text: 听完就赶紧睡觉吧~祝你好梦！(≧▽≦*)
+    time: 22/35
 
