--- a/config/api.yaml
+++ b/config/api.yaml
@@ -1,21 +1,25 @@
 llm:
   model: gemini #选择使用的模型(这里是大类别，具体模型在底下填)，用什么配什么
-  system: "你现在是一只猫娘"
+  system: "你现在是一只猫娘，我的名字是{用户}，是你的主人。"
   enable_proxy: False
   max_history_length: 100 #最大聊天记录条数
   Quote: False #回复时是否引用
-  focus_time: 60  #单次触发对话后持续有效时间，即艾特一次后，接下来不用艾特也能对话
+  focus_time: 60  #单次触发对话后持续有效时间
   openai:
     api_keys:
     - YOUR_API_KEY_1
     - YOUR_API_KEY_2
     model: glm-4-flash
-    quest_url: https://open.bigmodel.cn/api/paas/v4/chat/completions #完成调用地址。只填base_url不行
+    quest_url: https://open.bigmodel.cn/api/paas/v4/chat/completions #完整调用地址。只填base_url不行
   gemini:
     api_keys:
       - YOUR_API_KEY_1
+      - YOUR_API_KEY_2
     model: gemini-2.0-flash-exp
-    base_url: https://inspiring-piroshki-716f76.netlify.app #后面的/v1/beta什么的会自动填充
+    base_url: https://generativelanguage.googleapis.com #后面的/v1/beta什么的会自动填充
 proxy:
   http_proxy: ""
   socks_proxy: ""
+z_library:
+  email: ""
+  password: "你的密码" #快填，Eridanus会偷走你的密码
