--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -3,3 +3,7 @@ api_implements: #花里胡哨
      counter_probability: 100 #反击概率
      replylist:       #如果开启aiReplyCore，将不使用此处配置回复
        - "戳我干嘛呀！"
+basic_plugin:
+  setu:
+    r18mode: false
+    gray_layer: true #是否开启灰度图功能
