--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -7,3 +7,6 @@ basic_plugin:
   setu:
     r18mode: false
     gray_layer: true #是否开启灰度图功能
+  tarot:
+    lock: false #是否开启卡片锁定功能
+    mode: "blueArchive" #牌面。可填 blueArchive,bilibili,AbstractImages
