--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -12,3 +12,4 @@ resource_search:
 basic_plugin:
   setu_operate_level: 0    #色图功能所需等级
   search_image_resource_operate_level: 0  #图片搜索功能所需等级
+  bing_dalle3_operate_level: 0  #bing_dalle3绘图功能所需等级
