--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -9,6 +9,8 @@ resource_search:
   z_library:
     search_operate_level: 0    #书籍搜索所需等级
     download_operate_level: 998  #书籍下载所需等级
+  asmr:
+    asmr_level: 0
 basic_plugin:
   setu_operate_level: 0    #色图功能所需等级
   search_image_resource_operate_level: 0  #图片搜索功能所需等级
