--- a/config/api.yaml
+++ b/config/api.yaml
@@ -43,6 +43,7 @@ z_library: #填你的zlib账号，此功能需要开启代理。
   email: ""
   password: ""  #快填，Eridanus会偷走你的账号密码
 youtube_asmr:
+  send_type: file   #record或者file，record是语音，file是文件
   channels:      #频道来源。此功能需要配置proxy，并通过tools完成登录。
     - '@emococh'
     - '@-gabisroom-4153'
