--- a/config/api.yaml
+++ b/config/api.yaml
@@ -38,18 +38,16 @@ proxy:
   api_key: ""     #https://www.seniverse.com/ 申请后，填私钥
 image_search:
   sauceno_api_key: ""          #sauceno搜图api，你可以从https://saucenao.com/user.php注册并获取
-z_library: #填你的zlib账号，此功能需要开启代理。
+z_library:       #填你的zlib账号，此功能需要开启代理。
   search_num: 4        #搜索返回结果数量，默认4本书
   email: ""
   password: ""  #快填，Eridanus会偷走你的账号密码
-
-sdUrl: '' #你自己搭建的sd，地址，示例http://127.0.0.1:17858（示例≠你能直接填示例用），部署https://www.bilibili.com/video/BV1iM4y1y7oA/
-sd审核和反推api: ''        # 如果你的sd有反推插件https://github.com/spawner1145/stable-diffusion-webui-wd14-tagger.git，可以直接使用你的sdurl的api
-nai_key: ''
-
 youtube_asmr:
   send_type: file   #record或者file，record是语音，file是文件
-  channels:      #频道来源。此功能需要配置proxy，并通过tools完成登录。
+  channels:          #频道来源。此功能需要配置proxy，并通过tools完成登录。
     - '@emococh'
     - '@-gabisroom-4153'
-
+ai绘画:
+  sdUrl: '' #你自己搭建的sd，地址，示例http://127.0.0.1:17858（示例≠你能直接填示例用），部署https://www.bilibili.com/video/BV1iM4y1y7oA/
+  sd审核和反推api: ''        # 如果你的sd有反推插件https://github.com/spawner1145/stable-diffusion-webui-wd14-tagger.git，可以直接使用你的sdurl的api
+  nai_key: ''
