--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -5,7 +5,7 @@ api_implements: #花里胡哨
        - "戳我干嘛呀！"
 basic_plugin:
   setu:
-    r18mode: false
+    r18mode: true
     gray_layer: true #是否开启灰度图功能
   tarot:
     lock: false #是否开启卡片锁定功能
