--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -5,12 +5,15 @@ user_data:
 core:
   ai_reply_group: 0    #群内ai对话所需权限等级
   ai_reply_private: 0  #私聊ai对话所需权限等级
-resource_search:
+resource_search:   #资源搜索功能
   z_library:
     search_operate_level: 0    #书籍搜索所需等级
     download_operate_level: 998  #书籍下载所需等级
   asmr:
     asmr_level: 0
+  jmcomic:
+    jm_comic_search_level: 0  #jm搜索功能所需权限等级
+    jm_comic_download_level: 0          #jm下载功能所需权限等级
 basic_plugin:
   setu_operate_level: 0    #色图功能所需等级
   search_image_resource_operate_level: 0  #图片搜索功能所需等级
