--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -18,6 +18,10 @@ basic_plugin:
   setu_operate_level: 0    #色图功能所需等级
   search_image_resource_operate_level: 0  #图片搜索功能所需等级
   bing_dalle3_operate_level: 0  #bing_dalle3绘图功能所需等级
+流媒体:
+  youtube:
+    download_audio_level: 0  #下载音频所需权限等级
+    download_video_level: 30  #下载视频所需权限等级
 ai绘画:
   sd画图: true
   sd默认启动模型: 'noobaiXLNAIXL_vPred10Version.safetensors'
