b站动态监测

--- a/data/media_service/bilibili/bili_dynamic.yaml
+++ b/data/media_service/bilibili/bili_dynamic.yaml
@@ -1,4 +1,8 @@
 295040217:
-  latest_dynamic_id: ''
+  latest_dynamic_id: '1012448010741743617'
   push_groups:
   - 913122269
+1493391430:
+  push_groups:
+  - 879886836
+  latest_dynamic_id: 0
