我草，我真的服了

--- a/data/media_service/bilibili/bili_dynamic.yaml
+++ b/data/media_service/bilibili/bili_dynamic.yaml
@@ -1,8 +1,5 @@
 295040217:
-  latest_dynamic_id: '1012448010741743617'
+  latest_dynamic_id: ['1012448010741743617',"0"]
   push_groups:
   - 913122269
-1493391430:
-  push_groups:
-  - 879886836
-  latest_dynamic_id: 0
+
