--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -22,7 +22,8 @@ JMComic:            #禁漫相关功能设置
   autoClearPDF: True #下载后自动清除pdf
   savePath: "data/pictures/benzi"  #下载为pdf的默认保存路径
 
-bili_dynamic:    #下面的设置暂不可用，请暂时不要修改
-  enable: true #是否开启动态推送功能
+bili_dynamic:     #下面的设置暂不可用，请暂时不要修改
+  enable: true    #是否开启动态推送功能
   dynamic_interval: 300 #动态推送间隔时间，单位为秒
   screen_shot_mode: "mobile" #mobile为移动端截图，pc为PC端截图
+  draw_type: 2    #1代表用playwright（需要安装其余组件）；2代表本地Pillow绘图（有可能出错）
