还是等整合包吧 pip install 产生的报错一般用户根本没法解决。

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ pytubefix
 Beautifulsoup4
 aiofiles
 apscheduler
+pyyaml
 jmcomic
 img2pdf
 playwright
+bilibili-api-python
 PicImageSearch>=3.11.3
 httpx<0.28.0
