--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -3,6 +3,8 @@ bot_config:
   user_handle_logic_operate_level: 1000 #拉黑、解黑用户所需操作权限
   group_handle_logic: blacklist #模式。可填 blacklist, whitelist。blacklist下，屏蔽指定群，whitelist下，只处理指定群。
   group_handle_logic_operate_level: 1000 #拉黑、解黑群所需操作权限
+  邀请bot加群所需权限: 0
+  申请bot好友所需权限: 0
 api_implements: #花里胡哨
    nudge:               #戳一戳设置。
      counter_probability: 100 #反击概率
