--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -24,7 +24,7 @@ basic_plugin:
     download_video_level: 30  #下载视频所需权限等级
 ai绘画:
   sd画图: true
-  sd默认启动模型: '<lora:5blora5D20clearlight20E6B885.0yv7:1.0>'
+  sd默认启动模型: 'noobaiXLNAIXL_vPred10Version.safetensors'
   novel_ai画图: true
   no_nsfw_groups:               #禁止色图的群号
   - 111
