--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -26,6 +26,7 @@ basic_plugin:
 ai绘画:
   sd画图: true
   sd默认启动模型: 'noobaiXLNAIXL_vPred10Version.safetensors'
+  sd图片是否保存到生图端: false   #是否将生成的图片保存在webui的outputs里
   novel_ai画图: true
   no_nsfw_groups:               #禁止色图的群号
   - 111
