自定义启动分辨率

--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -28,6 +28,8 @@ ai绘画:
   sd默认启动模型: 'miaomiao_1_4.safetensors'
   sd图片是否保存到生图端: false   #是否将生成的图片保存在webui的outputs里
   novel_ai画图: false
+  sd画图默认分辨率: '1024,1536' # 宽,高（别带空格）
+  sd重绘默认分辨率: '1064,1064'
   no_nsfw_groups:               #禁止色图的群号
   - 111
   - 222
