asmr更新订阅/推送

--- a/data/tasks/scheduledTasks_push_groups.yaml
+++ b/data/tasks/scheduledTasks_push_groups.yaml
@@ -1,28 +1,4 @@
-astronomy:
+latest_asmr_push:
+  latest_asmr_id: 123456
   groups:
-    - 699455559
-constellation:
-  groups:
-    - 699455559
-danxiangli:
-  groups:
-    - 699455559
-    - 12345
-moyu:
-  groups:
-    - 699455559
-news:
-  groups:
-    - 699455559
-steamadd1:
-  groups:
-    - 699455559
-bangumi:
-  groups:
-    - 699455559
-nightASMR:
-  groups:
-    - 699455559
-bingEveryDay:
-  groups:
-    - 699455559
+  - 699455559
