--- a/config/basic_config.yaml
+++ b/config/basic_config.yaml
@@ -3,6 +3,8 @@ bot:
 master:
   name: "主人"
   id: 1840094972
+group:
+  test_group: 879886836   #测试群号1，随便建个小群。bot会往里面发乱七八糟的东西，不要填用户群。
 adapter:
   access_token: "any_access_token" #onebot实现部分为空/默认，一般不用改
   ws_client:
