--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -28,7 +28,7 @@ basic_plugin:
     download_video_level: 30  #下载视频所需权限等级
 ai绘画:
   sd画图: true
-  sd默认启动模型: 'miaomiao_1_4.safetensors'
+  sd默认启动模型: 'noobaiXLNAIXL_vPred10Version.safetensors'
   sd图片是否保存到生图端: false   #是否将生成的图片保存在webui的outputs里
   novel_ai画图: false
   sd画图默认分辨率: '1024,1536' # 宽,高（别带空格）
