--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -33,6 +33,17 @@ bili_dynamic:     #下面的设置暂不可用，请暂时不要修改
   screen_shot_mode: "mobile" #mobile为移动端截图，pc为PC端截图
   draw_type: 2    #1代表用playwright（需要安装其余组件）；2代表本地Pillow绘图（有可能出错）
   is_QQ_chek: True #是否检测qq小程序里的视频链接
+ai绘画:
+  sd画图: true
+  sd默认启动模型: 'noobaiXLNAIXL_vPred10Version.safetensors'
+  sd图片是否保存到生图端: false   #是否将生成的图片保存在webui的outputs里
+  novel_ai画图: false
+  sd画图默认分辨率: '1024,1536' # 宽,高（别带空格）
+  sd重绘默认分辨率: '1064,1064'
+  no_nsfw_groups:               #禁止色图的群号
+  - 111
+  - 222
+  - 333
 抽象检测:
   奶龙检测: false
   奶龙撤回: true
