搜图功能更新

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -19,6 +19,9 @@ basic_plugin:
   tarot:
     lock: false #是否开启卡片锁定功能
     mode: "blueArchive" #牌面。可填 blueArchive,bilibili,AbstractImages
+  搜图:
+    聚合搜图: true     #搜单图
+    soutu_bot: true  #搜本子
 JMComic:            #禁漫相关功能设置
   previewPages: 6  #验车预览页数
   autoClearPDF: True #下载后自动清除pdf
