--- a/config/api.yaml
+++ b/config/api.yaml
@@ -28,6 +28,8 @@ llm:
       - YOUR_API_KEY_1
     model: gemini-2.0-flash-001
     base_url: https://generativelanguage.googleapis.com #后面的/v1/beta什么的会自动填充
+    temperature: 0.7
+    maxOutputTokens: 2048
   腾讯元器:     #极其不建议用，腾子搞得玩意稀烂，而且不支持函数调用。
     智能体ID: ""
     token: ""
