--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -43,6 +43,7 @@ ai绘画:
   novel_ai画图: false
   sd画图默认分辨率: '1024,1536' # 宽,高（别带空格）
   sd重绘默认分辨率: '1064,1064'
+  sd队列长度限制: 6     #防止有人刷绘图指令。
   no_nsfw_groups:               #禁止色图的群号
   - 111
   - 222
