--- a/config/api.yaml
+++ b/config/api.yaml
@@ -5,9 +5,9 @@ llm:
   func_calling: True  #开启函数调用功能
   联网搜索: false      #官方版本联网搜索，与函数调用不可同时开启
   联网搜索显示原始数据: True   #此处联网搜索基于函数调用实现(非官方)，与上面的联网搜索不同，所以可以同时开启函数调用和实现联网搜索。
-  上下文读取模式: 0   #0为每人单独记录上下文，1为人设对单但是传入别人的聊天内容(可理解为群聊，多个群不共享上下文)
-  群聊临时记录消息数: 20    #在触发机器人回复前最多临时记录的消息数目，上下文读取模式为1时有效
-  prefix:
+  读取群聊上下文: true  #开启上下文读取功能，可读取群聊历史消息，并根据上下文进行回复。
+  可获取的群聊上下文长度: 20
+  prefix: #可以用于触发bot的指令前缀
     - "测试机"
   aiReplyCore: True   #ai回复核心，将优化其他功能回复表现
   enable_proxy: False
