--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -38,16 +38,27 @@ bili_dynamic:     #下面的设置暂不可用，请暂时不要修改
   is_QQ_chek: True #是否检测qq小程序里的视频链接
 ai绘画:
   sd画图: true
-  sd默认启动模型: 'noobaiXLNAIXL_vPred10Version.safetensors'
-  sd图片是否保存到生图端: false   #是否将生成的图片保存在webui的outputs里
+  sd默认启动模型: 'miaomiao_1_4.safetensors'
+  sd图片是否保存到生图端: true   #是否将生成的图片保存在webui的outputs里
   novel_ai画图: false
   sd画图默认分辨率: '1024,1536' # 宽,高（别带空格）
   sd重绘默认分辨率: '1064,1064'
   sd队列长度限制: 6     #防止有人刷绘图指令。
   no_nsfw_groups:               #禁止色图的群号
-  - 111
-  - 222
-  - 333
+  - '111'
+  - '222'
+  - '333'
+  其他默认绘图参数: # 各参数见文档https://eridanus-doc.netlify.app/docs/%E6%8B%93%E5%B1%95%E5%8A%9F%E8%83%BD/ai%E7%BB%98%E7%94%BB
+    - --d 0.7
+    - --p {},rating:general, best quality, very aesthetic, absurdres
+    - --n blurry, lowres, error, film grain, scan artifacts, worst quality, bad quality, jpeg artifacts, very displeasing, chromatic aberration, logo, dated, signature, multiple views, gigantic breasts
+    - --steps 15
+    - --sampler Restart
+    - --scheduler Align Your Steps
+    - --nai-sampler k_euler_ancestral
+    - --nai-scheduler karras
+    - --cfg 6.5
+    - --nai-cfg 5
 抽象检测:
   奶龙检测: false
   奶龙撤回: true
