--- a/config/api.yaml
+++ b/config/api.yaml
@@ -26,6 +26,8 @@ llm:
     quest_url: https://api.openai.com/v1/chat/completions   #完整调用地址。只填base_url不行
     temperature: 1.3
     max_tokens: 2048
+    CoT: True               #显示思维链
+    使用旧版prompt结构: true  #官网版deepseek-reasoner需要使用旧版prompt结构
   gemini:         #https://ai.google.dev/
     api_keys:  #继续像这样添加apikey
       - YOUR_API_KEY_1
