--- a/config/api.yaml
+++ b/config/api.yaml
@@ -41,7 +41,8 @@ llm:
 tts:
   tts_engine: modelscope_tts     #选择使用的语音合成引擎，可选napcat_tts/acgn_ai，配了哪个填哪个。
   acgn_ai:
-    token: ""             #https://getkey.acgnai.top/注册后，登录获取令牌
+    token:           #https://getkey.acgnai.top/注册后，登录获取令牌，每个token每天2000字，支持多token
+    - ""
     speaker: "玲可【星穹铁道】"
   napcat_tts:
     character_name: "酥心御姐"
