--- a/config/basic_config.yaml
+++ b/config/basic_config.yaml
@@ -3,6 +3,7 @@ bot:
 master:
   name: "主人"
   id: 1840094972
+webui: True  #将Eridanus连接到webui
 group:
   test_group: 879886836   #测试群号1，随便建个小群。bot会往里面发乱七八糟的东西，不要填用户群。
 adapter:
