--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -23,7 +23,7 @@ basic_plugin:
     聚合搜图: true     #搜单图
     soutu_bot: true  #搜本子
 JMComic:            #禁漫相关功能设置
-  anti_nsfw: gif   #防吞策略，可选gif、black_and_white、no_censor
+  anti_nsfw: black_and_white   #防吞策略，可选gif、black_and_white、no_censor
   gif_compress: false  #gif模式下是否压缩
   previewPages: 6  #验车预览页数
   autoClearPDF: True #下载后自动清除pdf
