--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -31,6 +31,7 @@ JMComic:            #禁漫相关功能设置
 asmr:
   with_url: false  #是否附带同作品集其他作品的url
   with_file: false #是否合并并发送音频文件
+  max_merge_file_num: 10 #最大合并文件数
   gray_layer: true #是否开启灰度图功能
 
 bili_dynamic:     #下面的设置暂不可用，请暂时不要修改
