去除表情包文件名

--- a/config/api.yaml
+++ b/config/api.yaml
@@ -4,6 +4,7 @@ llm:
   chara_file_name: 猫娘.txt   #system为""时生效 默认启动的人设文件名，在data/system/chara文件夹内(目前支持txt,json,酒馆角色卡(图片))
   func_calling: True  #开启函数调用功能
   表情包发送: true      #记录master发送的表情包并在回复时根据上下文发送。
+  单次发送表情包数量: 1  #单次发送最大表情包数量
   联网搜索: false      #官方版本联网搜索，与函数调用不可同时开启
   联网搜索显示原始数据: True   #此处联网搜索基于函数调用实现(非官方)，与上面的联网搜索不同，所以可以同时开启函数调用和实现联网搜索。
   读取群聊上下文: true  #开启上下文读取功能，可读取群聊历史消息，并根据上下文进行回复。
