--- a/config/api.yaml
+++ b/config/api.yaml
@@ -74,6 +74,7 @@ today_wife:
   wifePrefix: '/'                       #透群友的指令前缀
 
 ai绘画:
+  enalbe_proxy: false
   sdUrl: # 你自己搭建的sd，地址，示例http://127.0.0.1:17858（示例≠你能直接填示例用），免费云部署见文档，本地部署https://www.bilibili.com/video/BV1iM4y1y7oA/
     - '' 
   sd审核和反推api: '' # 如果你的sd有反推插件https://github.com/spawner1145/stable-diffusion-webui-wd14-tagger.git，可以直接使用你的sdurl的api
