--- a/config/api.yaml
+++ b/config/api.yaml
@@ -72,6 +72,7 @@ today_wife:
   - 'https://api.iw233.cn/api.php?sort=top'
   header: 'https://weibo.com/'          #知道的自己改，不知道的不要动
   wifePrefix: '/'                       #透群友的指令前缀
+  复读开关: True
 
 ai绘画:
   sdUrl: # 你自己搭建的sd，地址，示例http://127.0.0.1:17858（示例≠你能直接填示例用），免费云部署见文档，本地部署https://www.bilibili.com/video/BV1iM4y1y7oA/
