--- a/config/api.yaml
+++ b/config/api.yaml
@@ -42,7 +42,7 @@ llm:
     token: ""
 tts:
   tts_engine: modelscope_tts     #选择使用的语音合成引擎，可选napcat_tts/acgn_ai/vits(在群内下载整合包)，配了哪个填哪个。
-  vits:               #本地语音合成，配置要求极低，整合包请在q群913122269下载
+  vits:               #本地语音合成，配置要求极低，服务端整合包请在q群913122269下载
     lang_type: "ja"
     speaker: "綾地寧々"
     base_url: "http://127.0.0.1:5009"
