jojo系列塔罗牌

--- a/.github/ISSUE_TEMPLATE/report.yml
+++ b/.github/ISSUE_TEMPLATE/report.yml
@@ -10,9 +10,8 @@ body:
         在提交新的 Bug 反馈前，请确保您：
         * 已经搜索了现有的 issues，并且没有找到可以解决您问题的方法
         * 不与现有的某一 issue 重复
+        * 已更新至最新版Eridanus，且问题仍然存在
         * 请确保您的描述清晰，并提供足够的上下文信息，以便我们理解问题。
-        * 请不要在标题或内容中出现无意义的词语，否则可能会被忽略。
-        * 请不要在标题或内容中出现无意义的词语，否则可能会被忽略。
         * 请不要在标题或内容中出现无意义的词语，否则可能会被忽略。
         * 本issue template修改自napcat官方issue template，感谢NapCat团队的辛勤工作！
   - type: input
