--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -21,8 +21,10 @@ resource_search:   #资源搜索功能
 basic_plugin:
   setu_operate_level: 0    #色图功能所需等级
   search_image_resource_operate_level: 0  #图片搜索功能所需等级
-  内置ai绘画开关: true  #内置ai绘画功能开关
-  bing_dalle3_operate_level: 0  #bing_dalle3绘图功能所需等级
+  内置ai绘画1开关: true  #聚合接口
+  内置ai绘画2开关: true  #NoobXL-V-pred-v1.0，来自modelscope。
+  内置ai绘画1所需权限等级: 0  #默认聚合绘图功能所需等级
+  内置ai绘画2所需权限等级: 0  #NoobXL-V-pred-v1.0
 流媒体:
   youtube:
     download_audio_level: 0  #下载音频所需权限等级
