--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -2,6 +2,8 @@ user_data:
   auto_register: true  #自动为发送消息的用户注册。确保所有人都在数据库中，不建议关。
   change_info_operate_level: 0     #相关指令所需操作权限等级。默认0级最低，数字越大等级越高
   permit_user_operate_level: 998   #允许使用授权#{目标QQ}#{level} 指令的操作权限等级
+api_implement:
+  send_like: 0    #“赞我”功能所需权限等级
 core:
   ai_reply_group: 0    #群内ai对话所需权限等级
   ai_reply_private: 0  #私聊ai对话所需权限等级
