--- a/config/api.yaml
+++ b/config/api.yaml
@@ -42,7 +42,7 @@ llm:
 tts:
   tts_engine: online_vits2     #选择使用的语音合成引擎，可选napcat_tts/acgn_ai/vits(在群内下载整合包)，配了哪个填哪个。
   length_limit: 100 #语音合成最大长度，超过此长度将自动拒绝合成
-  lang_type: "zh"  #自动转换语言类型,ja或zh
+  lang_type: "zh"  #自动转换语言类型,ja或zh。vits系列建议全部ja
   online_vits2:
     speaker: "东海帝王 Tokai Teio (Umamusume Pretty Derby)"   #speaker见https://huggingface.co/spaces/Plachta/VITS-Umamusume-voice-synthesizer
   online_vits:   #配置方式见文档
