--- a/data/system/requirements.yaml
+++ b/data/system/requirements.yaml
@@ -1,7 +1,7 @@
 update:
   - jmcomic
   - pytubefix
-  - websockets
 restrict:
   - bilibili-api-python==16.3.0
+  - websockets==14.1
   - httpx==0.27.2
