--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -31,13 +31,16 @@ basic_plugin:
         - data/pictures/tarot/hidden_tarot/joseph.jpg: ""
         - data/pictures/tarot/hidden_tarot/vlt.jpg: ""
   搜图:
-    聚合搜图: true     #搜单图
-    soutu_bot: true  #搜本子
-JMComic:            #禁漫相关功能设置
+    聚合搜图: true          #搜单图
+    soutu_bot: true       #搜本子
+  绘图框架:
+    gal_recommend: True   #galgame推荐是否接入绘图框架，若false则聊天记录发送
+
+JMComic:                  #禁漫相关功能设置
   anti_nsfw: black_and_white   #防吞策略，可选gif、black_and_white、no_censor
-  gif_compress: false  #gif模式下是否压缩
-  previewPages: 6  #验车预览页数
-  autoClearPDF: True #下载后自动清除pdf
+  gif_compress: false     #gif模式下是否压缩
+  previewPages: 6         #验车预览页数
+  autoClearPDF: True      #下载后自动清除pdf
   savePath: "data/pictures/benzi"  #下载为pdf的默认保存路径
 asmr:
   with_url: false  #是否附带同作品集其他作品的url
