--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -96,6 +96,13 @@ ai绘画:
   - doro是你🐴？这么喜欢发你🐴的遗照？ #自己添加
   - 粉色奶龙
   - 唐
+  男娘检测: false
+  男娘撤回: true
+  男娘禁言: true
+  骂男娘:
+  - 漫朔你发个鸡脖男娘图 #自己添加
+  - 漫朔发男娘图给你超市
+  - 漫朔我要把你下面割掉
 scheduledTasks:    #其他定时任务模块的内容会陆续转到这里
   早安问候:         #晨间推送
     enable: true  #向信任用户推送天气信息
