--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -100,7 +100,7 @@ ai绘画:
   男娘撤回: true
   男娘禁言: true
   骂男娘:
-  - 漫朔发男娘图给你超市
+  - 发男娘图给你超市
 scheduledTasks:    #其他定时任务模块的内容会陆续转到这里
   早安问候:         #晨间推送
     enable: true  #向信任用户推送天气信息
